--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-gesture-handler": "^2.10.1",
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.3",
-    "react-native-screens": "^3.20.0"
+    "react-native-screens": "^3.20.0",
+    "react-native-webview": "^12.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
