--- a/ios/pacemaker/Info.plist
+++ b/ios/pacemaker/Info.plist
@@ -35,8 +35,13 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSHealthShareUsageDescription</key>
+	<string>건강 데이터를 쓸때 필요해요.</string>
+
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>건강 데이터를 받아오는데 필요해요.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>내주변 정확한 관광지 정보 제공을 위해 필요해요.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
