--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react-native": "0.71.8",
     "react-native-device-info": "^10.6.0",
     "react-native-gesture-handler": "^2.10.1",
+    "react-native-health": "^1.14.0",
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
+    "react-native-watch-connectivity": "^1.1.0",
     "react-native-webview": "^12.1.0"
   },
   "devDependencies": {
