feat: watch app workout 생성

--- a/ios/pacemaker.xcodeproj/xcshareddata/xcschemes/WatchApp Watch App.xcscheme
+++ b/ios/pacemaker.xcodeproj/xcshareddata/xcschemes/WatchApp Watch App.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E3D151332A27644D005F1CCB"
-               BuildableName = "WatchApp Watch App.app"
+               BuildableName = "&#x1111;&#x1169;&#x11bc;&#x1111;&#x1169;&#x11bc;&#x1103;&#x116e;&#x1103;&#x116e;.app"
                BlueprintName = "WatchApp Watch App"
                ReferencedContainer = "container:pacemaker.xcodeproj">
             </BuildableReference>
@@ -58,7 +58,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E3D151332A27644D005F1CCB"
-            BuildableName = "WatchApp Watch App.app"
+            BuildableName = "&#x1111;&#x1169;&#x11bc;&#x1111;&#x1169;&#x11bc;&#x1103;&#x116e;&#x1103;&#x116e;.app"
             BlueprintName = "WatchApp Watch App"
             ReferencedContainer = "container:pacemaker.xcodeproj">
          </BuildableReference>
@@ -75,7 +75,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E3D151332A27644D005F1CCB"
-            BuildableName = "WatchApp Watch App.app"
+            BuildableName = "&#x1111;&#x1169;&#x11bc;&#x1111;&#x1169;&#x11bc;&#x1103;&#x116e;&#x1103;&#x116e;.app"
             BlueprintName = "WatchApp Watch App"
             ReferencedContainer = "container:pacemaker.xcodeproj">
          </BuildableReference>
