--- a/ios/pacemaker/Info.plist
+++ b/ios/pacemaker/Info.plist
@@ -41,7 +41,11 @@
 	<string>건강 데이터를 받아오는데 필요해요.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>내주변 정확한 관광지 정보 제공을 위해 필요해요.</string>
-	<key>UILaunchStoryboardName</key>
+  <key>NSLocationAlwaysUsageDescription</key>
+  <string>Program requires GPS to track cars and job orders</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+  <string>Program requires GPS to track cars and job orders</string>
+  <key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
