feat: 폰트추가 및 택스트 컴포넌트 변경

--- a/ios/pacemaker/Info.plist
+++ b/ios/pacemaker/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>pacemaker</string>
+	<string>달리는거북이</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -39,13 +39,17 @@
 	<string>건강 데이터를 쓸때 필요해요.</string>
 	<key>NSHealthUpdateUsageDescription</key>
 	<string>건강 데이터를 받아오는데 필요해요.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Program requires GPS to track cars and job orders</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Program requires GPS to track cars and job orders</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>내주변 정확한 관광지 정보 제공을 위해 필요해요.</string>
-  <key>NSLocationAlwaysUsageDescription</key>
-  <string>Program requires GPS to track cars and job orders</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-  <string>Program requires GPS to track cars and job orders</string>
-  <key>UILaunchStoryboardName</key>
+	<key>UIAppFonts</key>
+	<array>
+		<string>RF</string>
+	</array>
+	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
