--- a/ios/pacemaker/Info.plist
+++ b/ios/pacemaker/Info.plist
@@ -47,7 +47,9 @@
 	<string>내주변 정확한 관광지 정보 제공을 위해 필요해요.</string>
 	<key>UIAppFonts</key>
 	<array>
-		<string>RF</string>
+		<string>RF.ttf</string>
+		<string>fonts/RF.ttf</string>
+		<string>fonts/Pretendard-Regular.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
