--- a/ios/pacemaker.xcodeproj/xcshareddata/xcschemes/WatchApp Watch App.xcscheme
+++ b/ios/pacemaker.xcodeproj/xcshareddata/xcschemes/WatchApp Watch App.xcscheme
@@ -44,7 +44,7 @@
       shouldAutocreateTestPlan = "YES">
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
