chore : apollo-client, graphQL 설치

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.15",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "graphql": "^16.6.0",
     "lottie-react-native": "^5.1.6",
     "react": "18.2.0",
     "react-native": "0.71.8",
