--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "ios": "react-native run-ios --simulator='iPhone 14'",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "generate": "graphql-codegen --config graphql.config.yml"
   },
   "dependencies": {
     "@apollo/client": "^3.7.15",
+    "@graphql-codegen/typescript": "^4.0.0",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@types/graphql": "^14.5.0",
     "graphql": "^16.6.0",
     "lottie-react-native": "^5.1.6",
     "react": "18.2.0",
@@ -34,6 +37,12 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@graphql-codegen/cli": "^4.0.1",
+    "@graphql-codegen/client-preset": "^4.0.0",
+    "@graphql-codegen/typescript-graphql-request": "^5.0.0",
+    "@graphql-codegen/typescript-operations": "^4.0.0",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/": "react-native-async-storage/async-storage",
@@ -46,7 +55,7 @@
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "^5.1.3"
   },
   "jest": {
     "preset": "react-native"
