--- a/ios/pacemaker/Info.plist
+++ b/ios/pacemaker/Info.plist
@@ -65,5 +65,25 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleURLTypes</key>
+	<array>
+			<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+					<string>kakaoec4ffed9033db1dfcee94288488ba2cb</string>
+			</array>
+			</dict>
+	</array>
+
+	<key>KAKAO_APP_KEY</key>
+	<string>ec4ffed9033db1dfcee94288488ba2cb</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+			<string>kakaokompassauth</string>
+			<string>storykompassauth</string>
+			<string>kakaolink</string>
+	</array>
 </dict>
 </plist>
