--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@graphql-codegen/typescript": "^4.0.0",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-masked-view/masked-view": "^0.2.9",
+    "@react-native-seoul/kakao-login": "^5.2.6",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@types/graphql": "^14.5.0",
