--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@graphql-codegen/typescript": "^4.0.0",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-masked-view/masked-view": "^0.2.9",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-native-seoul/kakao-login": "^5.2.6",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
@@ -32,7 +33,8 @@
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-watch-connectivity": "^1.1.0",
-    "react-native-webview": "^12.1.0"
+    "react-native-webview": "^12.1.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
