--- a/ios/pacemaker/Info.plist
+++ b/ios/pacemaker/Info.plist
@@ -74,7 +74,7 @@
 		<string>fonts/JGaegujaengyi-Medium.otf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>LaunchScreen.storyboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
