--- a/ios/WatchApp-Watch-App-Info.plist
+++ b/ios/WatchApp-Watch-App-Info.plist
@@ -4,6 +4,7 @@
 <dict>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>audio</string>
 		<string>location</string>
 	</array>
 	<key>WKBackgroundModes</key>
