--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-device-info": "^10.6.0",
+    "react-native-fast-image": "^8.6.3",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.10.1",
     "react-native-health": "^1.14.0",
@@ -34,13 +35,12 @@
     "recoil": "^0.7.7"
   },
   "devDependencies": {
-    "@graphql-codegen/typescript": "^4.0.0",
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@graphql-codegen/cli": "^4.0.1",
-    "@types/graphql": "^14.5.0",
     "@graphql-codegen/client-preset": "^4.0.0",
+    "@graphql-codegen/typescript": "^4.0.0",
     "@graphql-codegen/typescript-graphql-request": "^5.0.0",
     "@graphql-codegen/typescript-operations": "^4.0.0",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
@@ -48,6 +48,7 @@
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/": "react-native-async-storage/async-storage",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
