--- a/ios/pacemaker/Info.plist
+++ b/ios/pacemaker/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>달리는거북이</string>
+	<string>포도밭거북이</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -72,6 +72,13 @@
 		<string>fonts/JGaegujaengyi-Bold.otf</string>
 		<string>fonts/JGaegujaengyi-Light.otf</string>
 		<string>fonts/JGaegujaengyi-Medium.otf</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>external-accessory</string>
+		<string>location</string>
+		<string>processing</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen.storyboard</string>
