--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-watch-connectivity": "^1.1.0",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "rn-swipe-button": "^1.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
