--- a/ios/Podfile
+++ b/ios/Podfile
@@ -25,6 +25,8 @@ pod 'react-native-geolocation-service', :path => '../node_modules/react-native-g
 # React Native Maps dependencies
 # The following line is only needed if building on an Apple silicon Mac without rosetta.
 pod 'Google-Maps-iOS-Utils', :git => 'https://github.com/Simon-TechForm/google-maps-ios-utils.git', :branch => 'feat/support-apple-silicon'
+pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
+
 
 rn_maps_path = '../node_modules/react-native-maps'
 pod 'react-native-google-maps', :path => rn_maps_path
