--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-seoul/kakao-login": "^5.2.6",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "dayjs": "^1.11.8",
     "graphql": "^16.6.0",
     "lottie-react-native": "^5.1.6",
     "react": "18.2.0",
