--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
+    "react-native-track-player": "^3.2.0",
     "react-native-watch-connectivity": "^1.1.0",
     "recoil": "^0.7.7",
     "rn-swipe-button": "^1.3.8"
