--- a/ios/pacemaker.xcodeproj/xcshareddata/xcschemes/WatchApp Watch App.xcscheme
+++ b/ios/pacemaker.xcodeproj/xcshareddata/xcschemes/WatchApp Watch App.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E3D151332A27644D005F1CCB"
-               BuildableName = "&#x1111;&#x1169;&#x1103;&#x1169;&#x1107;&#x1161;&#x11c0;&#x1100;&#x1165;&#x1107;&#x116e;&#x11a8;&#x110b;&#x1175;.app"
+               BuildableName = "paceMakerWatchApp.app"
                BlueprintName = "WatchApp Watch App"
                ReferencedContainer = "container:pacemaker.xcodeproj">
             </BuildableReference>
@@ -44,9 +44,9 @@
       shouldAutocreateTestPlan = "YES">
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
-      selectedDebuggerIdentifier = ""
-      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
+      buildConfiguration = "Debug"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
