--- a/ios/WatchApp-Watch-App-Info.plist
+++ b/ios/WatchApp-Watch-App-Info.plist
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-	<dict>
-		<key>BGTaskSchedulerPermittedIdentifiers</key>
-		<array>
-			<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-		</array>
-		<key>UIBackgroundModes</key>
-		<array>
-			<string>location</string>
-			<string>processing</string>
-		</array>
-		<key>WKBackgroundModes</key>
-		<array>
-			<string>workout-processing</string>
-		</array>
-	</dict>
+<dict>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>fonts/Pretendard-Regular.ttf</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+		<string>processing</string>
+	</array>
+	<key>WKBackgroundModes</key>
+	<array>
+		<string>workout-processing</string>
+	</array>
+</dict>
 </plist>
