--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@react-navigation/stack": "^6.3.16",
     "dayjs": "^1.11.8",
     "graphql": "^16.6.0",
-    "graphql-ws": "^5.13.1",
     "lottie-react-native": "^5.1.6",
     "react": "18.2.0",
     "react-native": "0.71.8",
@@ -37,7 +36,8 @@
     "react-native-track-player": "^3.2.0",
     "react-native-watch-connectivity": "^1.1.0",
     "recoil": "^0.7.7",
-    "rn-swipe-button": "^1.3.8"
+    "rn-swipe-button": "^1.3.8",
+    "subscriptions-transport-ws": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
