--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^6.3.16",
     "dayjs": "^1.11.8",
     "graphql": "^16.6.0",
+    "jwt-decode": "^3.1.2",
     "lottie-react-native": "^5.1.6",
     "react": "18.2.0",
     "react-native": "0.71.8",
