--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-track-player": "^3.2.0",
     "react-native-watch-connectivity": "^1.1.0",
+    "react-native-webview": "^13.2.0",
     "recoil": "^0.7.7",
     "rn-swipe-button": "^1.3.8",
     "subscriptions-transport-ws": "^0.11.0"
