--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-track-player": "^3.2.0",
     "react-native-watch-connectivity": "^1.1.0",
     "react-native-webview": "^13.2.0",
