feat:코드푸쉬 적용

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
+    "push:staging" : "appcenter codepush release-react -a raymondanything/tortoise-in-vineyard -d Staging",
+    "push:release" : "appcenter codepush release-react -a raymondanything/tortoise-in-vineyard -d Production",
     "generate": "graphql-codegen --config graphql.config.yml"
   },
   "dependencies": {
@@ -19,12 +21,15 @@
     "@react-native-seoul/kakao-login": "^5.2.6",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "appcenter-cli": "^2.13.8",
     "dayjs": "^1.11.8",
+    "global": "^4.4.0",
     "graphql": "^16.6.0",
     "jwt-decode": "^3.1.2",
     "lottie-react-native": "^5.1.6",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-code-push": "^8.0.2",
     "react-native-device-info": "^10.6.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-geolocation-service": "^5.3.1",
