--- a/ios/pacemaker/Info.plist
+++ b/ios/pacemaker/Info.plist
@@ -24,6 +24,8 @@
 		<string>$(MARKETING_VERSION)</string>
 		<key>CFBundleSignature</key>
 		<string>????</string>
+		<key>CodePushDeploymentKey</key>
+		<string>jqhpC1guoCWsuZ-AGS7RDi5RgmEqb7scLj6C0</string>
 		<key>CFBundleURLTypes</key>
 		<array>
 			<dict>
