--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "push:staging" : "appcenter codepush release-react -a raymondanything/tortoise-in-vineyard -d Staging",
-    "push:release" : "appcenter codepush release-react -a raymondanything/tortoise-in-vineyard -d Production",
+    "push:staging": "appcenter codepush release-react -a raymondanything/tortoise-in-vineyard -d Staging",
+    "push:release": "appcenter codepush release-react -a raymondanything/tortoise-in-vineyard -d Production",
     "generate": "graphql-codegen --config graphql.config.yml"
   },
   "dependencies": {
@@ -60,10 +60,12 @@
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.3.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/": "react-native-async-storage/async-storage",
     "@types/graphql": "^14.5.0",
-    "@types/jest": "^29.2.1",
+    "@types/jest": "^29.5.6",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
@@ -71,7 +73,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "^18.2.0",
     "typescript": "^5.1.3"
   },
   "jest": {
